# ayaya-discord-bot

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Shuttle.toml  backup.sql  build.rs  cliff.toml  docker-compose.yml  flake.nix  justfile
.github/workflows/: checks.yaml  docker-build.yaml  release.yaml  shuttle-deploy.yaml
ayaya-lib/: Cargo.toml  build.rs
ayaya-lib/src/: dashboard.rs  data.rs  error.rs  event_handler.rs  lib.rs  metrics.rs  service.rs  tracker.rs  utils.rs
ayaya-lib/src/admin/: mod.rs
ayaya-lib/src/api/: auth.rs  mod.rs
ayaya-lib/src/auth/: middleware.rs  mod.rs
ayaya-lib/src/auth_http/: middleware.rs
ayaya-lib/src/data/: archive.rs  dashboard.rs  mod.rs  permissions.rs  sounds.rs  stats.rs  tracker.rs  utils.rs  wuwa_tracker.rs
ayaya-lib/src/data/tracker/: models.rs
ayaya-lib/src/memes/: mod.rs
ayaya-lib/src/owner/: dashboard.rs  mod.rs
ayaya-lib/src/stats/: mod.rs
ayaya-lib/src/tracker/: accounts.rs  game_selector.rs  pulls.rs
ayaya-lib/src/tracker_adapter/: mod.rs  wuwa.rs
ayaya-lib/src/voice/: error.rs  events.rs  utils.rs
ayaya-lib/src/voice/commands/: admin.rs  mod.rs  playback_control.rs  queue.rs  soundboard.rs
ayaya-lib/src/voice/commands/play_command/: join.rs  mod.rs  play.rs  youtube.rs
ayaya-runner-local/: Cargo.toml
ayaya-runner-local/src/: main.rs
ayaya-runner-shuttle/: Cargo.toml
ayaya-runner-shuttle/src/: main.rs
crates/ayaya-core/: Cargo.toml
crates/ayaya-core/src/: lib.rs  metrics.rs  tracker.rs
crates/ayaya-core/src/auth/: token.rs
crates/ayaya-db/: Cargo.toml
crates/ayaya-db/migration/: Cargo.toml
crates/ayaya-db/migration/src/: lib.rs  m20250512_000001_create_table_songcalls.rs  m20250610_042820_remote_migration.rs  m20260127_000001_wuwa_import_state.rs  m20260207_060550_akend_pull_tracker.rs  m20260220_020540_akend_pull_weapons.rs  m20260221_152529_akend_numeric_seqid.rs  m20260413_142658_voicechat_mon.rs
crates/ayaya-db/src/: constants.rs  error.rs  lib.rs
crates/ayaya-db/src/data/: akend_tracker.rs  dashboard.rs  mod.rs  permissions.rs  sounds.rs  stats.rs  utils.rs  voice.rs  wuwa_tracker.rs
crates/ayaya-db/src/entity/: ak_end_char_pull.rs  ak_end_import_state.rs  ak_end_pull.rs  ak_end_user.rs  ak_end_weap_pull.rs  ban_user_command_use.rs  command_call_log.rs  dashboard_allowlist.rs  mod.rs  prelude.rs  song_queues.rs  user_play_queries.rs  voice_sessions.rs  voice_state_events.rs  wuwa_pull.rs  wuwa_resource.rs  wuwa_user.rs  youtube_cookies.rs
crates/ayaya-tracker/: Cargo.toml
crates/ayaya-tracker/src/: lib.rs
crates/ayaya-tracker/src/gacha_tracker/: akend.rs  error.rs  mod.rs  types.rs  wuwa.rs
dashboard/: package.json  vite.config.ts
dashboard/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
dashboard/.svelte-kit/output/client/.vite/: manifest.json
dashboard/.svelte-kit/output/client/_app/immutable/assets/: 0.BLTRDIer.css  2.C1KrCLnD.css  3.DwKTSDDC.css
dashboard/.svelte-kit/output/client/_app/immutable/chunks/: BC4PGmkJ.js  Bc9KpfpO.js  CkBGWJc5.js  V8EXUeVp.js  zfapz0aU.js
dashboard/.svelte-kit/output/client/_app/immutable/entry/: app.f7bw2Q-T.js  start.CIsZp4EV.js
dashboard/.svelte-kit/output/client/_app/immutable/nodes/: 1.B9xfmgOb.js  2.CfA-6gRF.js  3.C-av5i87.js
dashboard/.svelte-kit/output/prerendered/pages/: index.html
dashboard/.svelte-kit/output/server/: manifest-full.js  manifest.js
dashboard/.svelte-kit/output/server/.vite/: manifest.json
dashboard/.svelte-kit/output/server/chunks/: auth.js  escaping.js  index.js  index2.js  internal.js
dashboard/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
dashboard/.svelte-kit/output/server/entries/pages/login/: _page.svelte.js
dashboard/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js
dashboard/.svelte-kit/types/: route_meta_data.json
dashboard/.svelte-kit/types/src/routes/: $types.d.ts
dashboard/src/lib/: api.ts
dashboard/src/lib/stores/: auth.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/src/routes/login/: +page.svelte
dev/: datasource.yaml  prometheus.yml  wuwa_model_type_1.json  wuwa_model_type_2.json  wuwa_model_type_3.json  wuwa_model_type_4.json
entity/: Cargo.toml
entity-archive/: Cargo.toml
entity-archive/src/: lib.rs  messages.rs  prelude.rs
entity-sqlite/: Cargo.toml
entity-sqlite/src/: ban_shit_music.rs  command_allow_user.rs  dashboard_tokens.rs  lib.rs  prelude.rs  require_category_role.rs  require_command_role.rs  song_queues.rs  sounds.rs  upload_noticed.rs  user_command_all_time_statistics.rs  user_play_queries.rs  wuwa_import_state.rs
entity/src/: ban_shit_music.rs  ban_user_command_use.rs  command_allow_user.rs  command_call_log.rs  lib.rs  prelude.rs  require_category_role.rs  require_command_role.rs  user_command_all_time_statistics.rs  youtube_cookies.rs
migration/: Cargo.toml
migration-archive/: Cargo.toml
migration-archive/src/: lib.rs  m20250728_000001_create_table.rs  main.rs
migration-sqlite/: Cargo.toml
migration-sqlite/src/: lib.rs  m20250528_084830_soundboard_table.rs  m20250901_092422_wuwa_pull_tracker.rs  m20251104_000001_dashboard_allowlist.rs  m20251104_000002_dashboard_tokens.rs  m20260127_000001_wuwa_import_state.rs  main.rs
migration/src/: lib.rs  m20220101_000001_create_tables_initial.rs  m20241115_044942_require_category_role.rs  m20241117_051009_youtube_cookies.rs
models/: akend_1_0.json  ayaya_flat_playlist.json
src/: data.rs  error.rs  lib.rs  main.rs  metrics.rs  service.rs  utils.rs  voice.rs  voice_events.rs
src/admin/: mod.rs
src/memes/: mod.rs
src/owner/: mod.rs
src/stats/: mod.rs
src/voice/: commands.rs  error.rs  events.rs  mod.rs  utils.rs
src/voice/commands/: admin.rs  mod.rs  playback_control.rs  queue.rs
src/voice/commands/play_command/: join.rs  mod.rs  play.rs  youtube.rs
