[workspace]
resolver = "2"
members = [
  "ayaya-lib",
  "ayaya-runner-local",
  "ayaya-runner-shuttle",
  "entity-sqlite",
  "migration-sqlite",
]
default-members = ["ayaya-lib", "ayaya-runner-local"]

[workspace.package]
version = "2025.11.5-2"
edition = "2018"
rust-version = "1.88.0"

[workspace.dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
sea-orm = { version = "1", default-features = false, features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-mysql",
  "sqlx-sqlite",
  "with-json",
  "with-time",
  "with-uuid",
] }
shuttle-runtime = { version = "0.51", default-features = false }
snafu = { version = "0.8" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
