[workspace]
resolver = "2"
members = [
  "ayaya-lib",
  "ayaya-runner-local",
  "ayaya-runner-shuttle",
  "crates/ayaya-core",
  "crates/ayaya-db",
  "crates/ayaya-db/migration",
  "crates/ayaya-tracker"
]
default-members = ["ayaya-lib", "ayaya-runner-local"]

[workspace.package]
version = "2026.2.11-0"
edition = "2024"
rust-version = "1.91.0"

[workspace.dependencies]
anyhow = { version = "1" }
argon2 = { version = "0.5" }
async-trait = { version = "0.1" }
base64 = { version = "0.22" }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
lru-mem = { version = "0.3" }
rand = { version = "0.8" }
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "1", default-features = false, features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-mysql",
  "sqlx-sqlite",
  "with-json",
  "with-time",
  "with-uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
shuttle-runtime = { version = "0.51", default-features = false }
snafu = { version = "0.8" }
strum = { version = "0.26", features = ["derive"] }
time = { version = "0.3", features = [
  "formatting",
  "local-offset",
  "macros",
  "parsing"
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = { version = "0.1" }
url = { version = "2.5.2" }
uuid = { version = "*", features = ["v4", "v5", "v7"] }

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise.git"
branch = "serenity-next"
# rev = "84ef2d1654610b403d1e66225e67435cb7e2a88b"

[workspace.dependencies.serenity]
# version = "0.12"
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
# rev = "e8525349654200bd5f4318e05bb3c5b314d89917"
features = [
  "cache",
  "collector",
  "framework",
  "gateway",
  "http",
  "rustls_backend",
  "voice",
]

[workspace.dependencies.songbird]
# version = "0.5.0"
git = "https://github.com/serenity-rs/songbird.git"
branch = "serenity-next"
features = ["builtin-queue", "driver", "serenity"]
