[package]
name = "ayaya-lib"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }

[dependencies]
# workspace deps
shuttle-runtime = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
sea-orm = { workspace = true }
bincode = { workspace = true }
serde = {version = "1", features = ["derive"]}

tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "std",
  "time",
] }
tracing = "0.1"
tracing-error = { version = "0.2", features = ["traced-error"] }
# color-eyre = "0.6"
reqwest = { version = "0.12" , features = ["json"]}
uuid = { version = "*", features = ["v7", "v5"] }
humantime = { version = "2" }
youtube_dl = { version = "0.10", features = ["tokio"] }
time = { version = "0.3", features = ["local-offset"] }
anyhow = "1"
tracing-loki = "0.2.5"
base64 = "0.22.1"
url = "2.5.2"
rand = "0.8"
axum = { version = "0.7" }
axum-auth = { version = "0.7" }
strum = { version = "0.26", features = ["derive"] }
entity-sqlite = { path = "../entity-sqlite" }
migration-sqlite = { path = "../migration-sqlite" }
age = { version = "0.11" }
lru-mem = { version = "0.3" }
prometheus-client = { version = "0.22" }
sha1_smol = { version = "1" }
tempfile = { version = "3" }
serde_json = {version = "1"}

[dependencies.songbird]
version = "0.5.0"
features = ["builtin-queue", "driver", "serenity"]

[dependencies.serenity]
version = "0.12"
# git = "https://github.com/serenity-rs/serenity.git"
# # branch = "next"
# rev = "c3d4a3386ea0710a81618f07771c83912c5f6196"
features = [
  "cache",
  "framework",
  "voice",
  "http",
  "rustls_backend",
  "gateway",
  "collector",
]

[dependencies.poise]
git = "https://github.com/serenity-rs/poise.git"
rev = "bbc837a1dd170d6ebb5c9208d7a9fd8b3dc27a27"

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"]

[build-dependencies]
# All features enabled
vergen-gix = { version = "1.0.0", features = ["build", "cargo", "rustc"] }
anyhow = { version = "1" }
