[package]
name = "ayaya-lib"
version = { workspace = true }
edition.workspace = true
rust-version = { workspace = true }

[dependencies]
age = { version = "0.11" }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.7" }
axum-auth = { version = "0.7" }
ayaya-core = { path = "../crates/ayaya-core" }
ayaya-db = { path = "../crates/ayaya-db" }
ayaya-tracker = { path = "../crates/ayaya-tracker" }
base64 = { workspace = true }
bincode = { workspace = true }
humantime = { version = "2" }
lru-mem = { workspace = true }
poise.workspace = true
prometheus-client = { version = "0.22" }
rand = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serenity.workspace = true
sha1_smol = { version = "1" }
shuttle-runtime = { workspace = true }
snafu = { workspace = true }
songbird.workspace = true
strum.workspace = true
tempfile = { version = "3" }
time = { workspace = true }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-error = { version = "0.2", features = ["traced-error"] }
tracing-loki = "0.2.5"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "std",
  "time",
] }
url = { workspace = true }
uuid = { workspace = true }
youtube_dl = { version = "0.10", features = ["tokio"] }

[dependencies.symphonia]
version = "0.5"
features = ["all"]

[build-dependencies]
anyhow = { workspace = true }
# All features enabled
vergen-gix = { version = "9.1", features = ["build", "cargo", "rustc"] }
