[package]
name = "migration-archive"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",  # `DATABASE_DRIVER` feature
]
