[package]
name = "migration-sqlite"
version = { workspace = true }
edition = "2021"
publish = false

[lib]
name = "migration_sqlite"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls"
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
