[package]
name = "ayaya-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ayaya-core.path = "../ayaya-core"
bincode.workspace = true
lru-mem = { workspace = true }
migration.path = "migration"
poise = { workspace = true }
sea-orm.workspace = true
serde = { workspace = true }
snafu.workspace = true
time = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
