[package]
name = "ayaya-tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ayaya-core = { path = "../ayaya-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
