[package]
name = "ayaya-tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ayaya-core = { path = "../ayaya-core" }
bon = { version = "3.8" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
dotenvy = { version = "0.15" }
tokio.workspace = true
